--- a/web/index.html
+++ b/web/index.html
@@ -28,8 +28,9 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBl9km4WIQ7Bkp6YdRRxCW5VrvGYzx-5oY"></script>
 
-  <title>playtomic</title>
+  <title>Playtomic</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
